Use multi query

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "dev": "bun --hot ./server.ts",
     "build": "bun build ./index.html --outdir ./dist",
+    "fetch:specs": "bun run fetch:datakatalog && bun run fetch:uberiket",
+    "fetch:datakatalog": "curl -sS -H 'X-Client: nvdb-vis-vegobjekter' 'https://nvdbapiles.atlas.vegvesen.no/api-docs/datakatalog' -o specs/datakatalog.json",
+    "fetch:uberiket": "curl -sS -H 'X-Client: nvdb-vis-vegobjekter' 'https://nvdbapiles.atlas.vegvesen.no/api-docs/uberiket' -o specs/uberiket.json",
     "generate:api": "bun run generate:datakatalog && bun run generate:uberiket && bun run generate:cleanup",
     "generate:datakatalog": "bunx openapi-generator-cli generate -i specs/datakatalog.json -g typescript-axios -o src/api/generated/datakatalog --global-property=models,apis,supportingFiles=index.ts:base.ts:common.ts:configuration.ts --additional-properties=supportsES6=true,withSeparateModelsAndApi=true,modelPackage=models,apiPackage=api",
     "generate:uberiket": "bunx openapi-generator-cli generate -i specs/uberiket.json -g typescript-axios -o src/api/generated/uberiket --global-property=models,apis,supportingFiles=index.ts:base.ts:common.ts:configuration.ts --additional-properties=supportsES6=true,withSeparateModelsAndApi=true,modelPackage=models,apiPackage=api",
