--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@hey-api/openapi-ts": "^0.90.4",
     "@openapitools/openapi-generator-cli": "2.19.1",
     "@types/bun": "latest",
-    "@types/proj4": "^2.19.0",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3"
   },
@@ -27,9 +26,9 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "@hey-api/client-fetch": "^0.13.1",
     "@tanstack/react-query": "^5.90.19",
     "axios": "^1.13.2",
+    "jotai": "^2.16.2",
     "ol": "^10.7.0",
     "proj4": "^2.20.2",
     "react": "^19.2.3",
