--- a/package.json
+++ b/package.json
@@ -9,15 +9,11 @@
     "fetch:specs": "bun run fetch:datakatalog && bun run fetch:uberiket",
     "fetch:datakatalog": "curl -sS -H 'X-Client: nvdb-vis-vegobjekter' 'https://nvdbapiles.atlas.vegvesen.no/api-docs/datakatalog' -o specs/datakatalog.json",
     "fetch:uberiket": "curl -sS -H 'X-Client: nvdb-vis-vegobjekter' 'https://nvdbapiles.atlas.vegvesen.no/api-docs/uberiket' -o specs/uberiket.json",
-    "generate:api": "bun run generate:datakatalog && bun run generate:uberiket && bun run generate:cleanup",
-    "generate:datakatalog": "bunx openapi-generator-cli generate -i specs/datakatalog.json -g typescript-axios -o src/api/generated/datakatalog --global-property=models,apis,supportingFiles=index.ts:base.ts:common.ts:configuration.ts --additional-properties=supportsES6=true,withSeparateModelsAndApi=true,modelPackage=models,apiPackage=api",
-    "generate:uberiket": "bunx openapi-generator-cli generate -i specs/uberiket.json -g typescript-axios -o src/api/generated/uberiket --global-property=models,apis,supportingFiles=index.ts:base.ts:common.ts:configuration.ts --additional-properties=supportsES6=true,withSeparateModelsAndApi=true,modelPackage=models,apiPackage=api",
-    "generate:cleanup": "rm -rf src/api/generated/*/docs src/api/generated/*/.openapi-generator src/api/generated/*/.gitignore src/api/generated/*/.npmignore src/api/generated/*/git_push.sh src/api/generated/*/.openapi-generator-ignore",
+    "generate:api": "bunx openapi-ts",
     "typecheck": "bunx tsc --noEmit"
   },
   "devDependencies": {
     "@hey-api/openapi-ts": "^0.90.4",
-    "@openapitools/openapi-generator-cli": "2.19.1",
     "@types/bun": "latest",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3"
