--- a/biome.json
+++ b/biome.json
@@ -17,7 +17,11 @@
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true
+      "recommended": true,
+      "a11y": {
+        "useSemanticElements": "warn",
+        "noStaticElementInteractions": "warn"
+      }
     }
   },
   "javascript": {
