--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,9 +26,7 @@
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
     "paths": {
-      "@komponentkassen/*": [
-        "./src/components/svv/*"
-      ]
+      "@komponentkassen/*": ["./src/components/svv/*"]
     }
   }
 }
