--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tanstack/react-query": "^5.90.19",
     "axios": "^1.13.2",
     "jotai": "^2.16.2",
+    "lucide-react": "^0.563.0",
     "ol": "^10.7.0",
     "proj4": "^2.20.2",
     "react": "^19.2.3",
